--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,97 +4,53 @@
     font-family: 'Permanent Marker', cursive;
     background-color: yellow;
     background-image: url(../images/background3.jpg);
-    background-repeat:no-repeat;
     background-position:center;
     background-attachment:fixed;
     background-size: cover;
   }
   
   img {
+    width: 140px;
     height:100px;
-    width:150px;
-    border-radius:10px;
   }
   
-  .section-title{
-    font-size:200%;
+  .title {
+    font-size:2em;
   }
   
-  .main-section-title{
-    font-size:300%;
+  .banner {
+    font-size:3em;
     text-align:center;
   }
   
-  .character{
+  .player{
     display:inline-block;
-    border-style:solid;
-    border-color: black;
-    border-width:3px;
+    border: 3px solid black;
     border-radius: 5px;
-    cursor:pointer;
     background-color: rgb(113, 206, 243);
     margin: 10px;
   }
-  .character:hover {
+
+  .player:hover {
     transform: scale(1.1);
   }
-  .character-image{
-    padding: 0 12px;
-    margin-top:3px;
-    margin-bottom:3px;
+
+  .player-image {
+    padding: 0 10px;
+    margin: 3px 0;
   }
-  .character-name{
+
+  .player-name {
     text-align:center;
   }
   
-  .character-health{
+  .player-hp {
     text-align:center;
   }
   
-  .enemy{
+  .opponent {
     display:inline-block;
-    border-style:solid;
-    border-color:black;
-    border-width:1px;
-    cursor:pointer;
+    border: 3px solid black;
     background-color:red;
   }
   
-  .target-enemy{
-    background-color:black;color:white;
-  }
-  
-  #selected-character{
-    width:190px;
-    height:160px;
-  }
-  
-  #attacker{
-    width:190px;
-    height:160px;
-  }
-  
-  #defender{
-    width:190px;
-    height:160px;
-  }
-  
-  #defender-name{
-    text-align:center;
-  }
-  
-  #defender-health{
-    text-align:center;
-  }
-  
-  #choose-enemy-button{
-    visibility:hidden;
-  }
-  
-  #restart-button{
-    visibility:hidden;
-  }
-  
-  #turn-counter{
-    font-size:150%;
-  }
